--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
-    "web-vitals": "^1.0.1",
-    "winston": "^3.3.3",
-    "winston-mongodb": "^5.0.5"
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
