--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
+    "@material-ui/pickers": "^3.2.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
@@ -29,6 +31,7 @@
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "source-map-loader": "^1.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
