--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.22.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
+    "react-datepicker": "^4.1.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.0.18",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
@@ -26,11 +30,16 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^5.2.6",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass-loader": "^12.1.0",
     "source-map-loader": "^1.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "style-loader": "^3.0.0",
+    "webpack": "^5.41.1",
+    "webpack-cli": "^3.3.12"
   }
 }
