--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.16"
+    "node": "14.16",
+    "npm": "6.14.11"
   },
   "scripts": {
     "start": "node src/index.js",
