--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-datepicker": "^4.1.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.0.18",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
