--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@atlaskit/modal-dialog": "^11.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "bootstrap": "^5.0.2",
     "date-fns": "^2.22.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -28,7 +30,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
     "react-datepicker": "^4.1.1",
-    "sweetalert": "^2.1.2",
+    "react-transition-group": "^2.9.0",
+    "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.18",
     "uuid": "^8.3.2"
   },
@@ -43,6 +46,7 @@
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "reactstrap": "^8.9.0",
     "sass-loader": "^12.1.0",
     "source-map-loader": "^1.0.0",
     "style-loader": "^3.0.0",
